# nsn

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_NOTES_T024.md  NSN_TESTNET_HANDOFF.md  README.md  T001-COMPLETION-SUMMARY.md  claude_code_zai_env.sh  docker-compose.yml  repomix-output.xml  tmp.md
icn-chain/node/: Cargo.toml
icn-chain/pallets/icn-director/: Cargo.toml  README.md
icn-chain/pallets/icn-pinning/: Cargo.toml
icn-chain/pallets/nsn-storage/: Cargo.toml  README.md
icn-nodes/: Cargo.toml
icn-nodes/common/: Cargo.toml
icn-nodes/common/src/: lib.rs
icn-nodes/director/: Cargo.toml  build.rs
icn-nodes/director/proto/: bft.proto
icn-nodes/director/src/: bft_coordinator.rs  config.rs  election_monitor.rs  keystore.rs  lib.rs  main.rs
icn-nodes/relay/: Cargo.toml  DEPLOYMENT.md
icn-nodes/relay/src/: cache.rs  config.rs  dht_verification.rs  error.rs  health_check.rs  latency_detector.rs  lib.rs  main.rs  merkle_proof.rs  metrics.rs  p2p_service.rs  quic_server.rs  relay_node.rs  upstream_client.rs
icn-nodes/relay/tests/: failover_test.rs
icn-nodes/super-node/: Cargo.toml
icn-nodes/super-node/src/: audit_monitor.rs  main.rs  storage.rs  storage_cleanup.rs
icn-nodes/super-node/tests/: integration_test.rs
icn-nodes/validator/: Cargo.toml
icn-nodes/validator/src/: attestation.rs  challenge_monitor.rs  lib.rs  main.rs
icn-nodes/validator/tests/: integration_test.rs
legacy-nodes/common/: Cargo.toml  README.md
legacy-nodes/common/src/: lib.rs
legacy-nodes/common/tests/: integration_gossipsub.rs  integration_p2p.rs
legacy-nodes/director/: Cargo.toml
legacy-nodes/director/config/: director-local.toml
legacy-nodes/director/src/: chain_client.rs  config.rs  error.rs  metrics.rs  p2p_service.rs  slot_scheduler.rs  types.rs  vortex_bridge.rs
node-core/: Cargo.toml  config.toml  plugins  run-plugin.sh  start-supernode.sh
node-core/.tasks/audit/: 2025-12-31.jsonl
node-core/.tasks/reports/: verify-complexity-T026-v2.md
node-core/crates/chain-client/: Cargo.toml
node-core/crates/lane0/: Cargo.toml
node-core/crates/lane1/: Cargo.toml
node-core/crates/p2p/: Cargo.toml
node-core/crates/primitives/: Cargo.toml
node-core/crates/scheduler/: Cargo.toml
node-core/crates/simulation/: Cargo.toml  README.md
node-core/crates/storage/: Cargo.toml
node-core/crates/types/: Cargo.toml
node-core/crates/validator/: Cargo.toml
node-core/sidecar/: Cargo.toml  build.rs
node-core/sidecar/proto/: sidecar.proto
node-core/sidecar/src/: client.rs  container.rs  error.rs  lib.rs  plugins.rs  service.rs  vram.rs
nsn-chain/: Cargo.toml  README.md  TESTING.md  TEST_COVERAGE_REPORT.md  deny.toml  rust-toolchain.toml  verify-build.sh  zombienet.toml
nsn-chain/chain-specs/: README.md
nsn-chain/docs/: chain-spec-guide.md  validator-onboarding.md
nsn-chain/integration-tests/: Cargo.toml
nsn-chain/integration-tests/src/: director_bft_tests.rs  director_reputation_tests.rs  epoch_lifecycle_test.rs  lib.rs  mock.rs  stake_director_tests.rs  task_market_stake_tests.rs  treasury_tests.rs
nsn-chain/node/: Cargo.toml
nsn-chain/node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
nsn-chain/pallets/nsn-bootstrap/: Cargo.toml
nsn-chain/pallets/nsn-director/: Cargo.toml
nsn-chain/pallets/nsn-model-registry/: Cargo.toml
nsn-chain/pallets/nsn-reputation/: Cargo.toml
nsn-chain/pallets/nsn-stake/: README.md
nsn-chain/pallets/nsn-task-market/: Cargo.toml
nsn-chain/runtime/: Cargo.toml
nsn-chain/runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
viewer/src-tauri/: Cargo.toml  tauri.conf.json
viewer/src-tauri/icons/: icon.icns
viewer/src-tauri/src/: commands.rs  main.rs  storage.rs
vortex/: .dockerignore  README.md  T014_IMPLEMENTATION_SUMMARY.md  T015_IMPLEMENTATION_SUMMARY.md  T016_IMPLEMENTATION_SUMMARY.md  T017_IMPLEMENTATION_SUMMARY.md  T018_IMPLEMENTATION_SUMMARY.md  T018_VERIFICATION_FIXES.md  T020_IMPLEMENTATION_SUMMARY.md  config.yaml  docker-compose.yml  mutmut_config.py  pyproject.toml  test.json  test_generation.py
vortex/assets/: README.md  scenarios.json
vortex/benchmarks/: clip_latency.py  flux_latency.py  flux_vram_profile.py  kokoro_latency.py  liveportrait_latency.py
vortex/docker/: Dockerfile.comfyui  Dockerfile.orchestrator
vortex/docs/plans/: 2026-01-20-audio-gated-driver.md  2026-01-20-toongen-architecture-pivot.md  2026-01-21-narrative-chain-design.md  2026-01-22-bark-tts-migration.md  2026-01-23-i2v-pipeline-restoration.md  2026-01-23-t2v-pipeline-design.md
vortex/outputs/: slot_1001_audio.npy
vortex/outputs/e2e_test/: e2e_test_report.json  render_slot9999_seed683464760_20260126_035841.json
vortex/outputs/production_test/: e2e_test_report.json
vortex/plugins/: index.json
vortex/plugins/vortex-lane0/: manifest.yaml  plugin.py
vortex/scripts/: download_and_quantize_clip.py  download_flux.py  download_kokoro.py  download_liveportrait.py  download_models.sh  e2e_narrative_test.py  test_animatediff.py  test_cartoon_e2e.py  test_cartoon_final.py  test_e2e.py  test_flux_simple.py  visual_check_flux.py
vortex/src/: config.yaml  renderers
vortex/src/vortex/: __init__.py  orchestrator.py  pipeline.py  server.py
vortex/tests/: __init__.py  test_audio_driver.py  test_imports.py  test_liveportrait_gated.py
vortex/tests/integration/: test_clip_ensemble.py  test_comfy_connection.py  test_flux_generation.py  test_full_pipeline_with_renderer.py  test_kokoro_synthesis.py  test_liveportrait_generation.py  test_plugin_sandbox.py  test_renderer_determinism.py  test_slot_orchestration.py  test_vram_monitoring.py
vortex/tests/unit/: __init__.py  test_audio_engine.py  test_audio_mixer.py  test_bark.py  test_clip_ensemble.py  test_cogvideox.py  test_comfy_client.py  test_encoder.py  test_flux.py  test_kokoro.py  test_liveportrait.py  test_memory.py  test_orchestrator.py  test_payload.py  test_pipeline.py  test_plugins.py  test_recipe_schema.py  test_renderer_constants.py  test_renderer_interface.py  test_renderer_montage.py  test_renderer_policy.py  (+3 more)
(+1013 files in other folders)
