[workspace]
resolver = "2"
members = [
    "common",
    "director",
    "validator",
    "super-node",
    "relay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ICN Team"]
license = "MIT"
repository = "https://github.com/user/interdim-cable"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# P2P networking
libp2p = { version = "0.53", features = ["tokio", "quic", "gossipsub", "kad", "noise", "yamux", "dns", "tcp", "identify", "macros"] }

# Substrate client
subxt = "0.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parity-scale-codec = { version = "3.7", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek = "2.1"

# Metrics
prometheus = "0.13"

# Local crates
icn-common = { path = "common" }
