[workspace.package]
license = "GPL-3.0"
authors = ["Neural Sovereign Network <dev@nsn.network>"]
homepage = "https://github.com/neon-stream/nsn-chain"
repository = "https://github.com/neon-stream/nsn-chain"
edition = "2021"

[workspace]
default-members = ["runtime", "node"]
members = [
    "node",
    "runtime",
    "pallets/nsn-stake",
    "pallets/nsn-reputation",
    "pallets/nsn-director",
    "pallets/nsn-bft",
    "pallets/nsn-storage",
    "pallets/nsn-treasury",
    "pallets/nsn-task-market",
    "pallets/nsn-model-registry",
]
resolver = "2"

[workspace.dependencies]
# NSN crates
nsn-runtime = { path = "./runtime", default-features = false }
pallet-nsn-stake = { path = "./pallets/nsn-stake", default-features = false }
pallet-nsn-reputation = { path = "./pallets/nsn-reputation", default-features = false }
pallet-nsn-director = { path = "./pallets/nsn-director", default-features = false }
pallet-nsn-bft = { path = "./pallets/nsn-bft", default-features = false }
pallet-nsn-storage = { path = "./pallets/nsn-storage", default-features = false }
pallet-nsn-treasury = { path = "./pallets/nsn-treasury", default-features = false }
pallet-nsn-task-market = { path = "./pallets/nsn-task-market", default-features = false }
pallet-nsn-model-registry = { path = "./pallets/nsn-model-registry", default-features = false }
nsn-primitives = { path = "../node-core/crates/primitives", default-features = false }

# Substrate/Polkadot SDK crates (version-aligned for compatibility)
cumulus-pallet-parachain-system = { version = "0.25.0", default-features = false }
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
parity-scale-codec = { version = "3.7.4", default-features = false }

# External dependencies
clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "2512.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.7", default-features = false, package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "29.0.0", default-features = false }
frame = { version = "0.10.0", default-features = false, package = "polkadot-sdk-frame" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
