[package]
name = "icn-node"
description = "ICN Chain node implementation - Polkadot SDK based blockchain for Interdimensional Cable Network"
version = "0.1.0"
license = "GPL-3.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
icn-runtime = { workspace = true }
polkadot-sdk = { workspace = true, features = ["node"] }
prometheus-endpoint = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"icn-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"icn-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"icn-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
