[package]
name = "icn-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared libraries for ICN off-chain nodes (P2P, chain client, types)"

[dependencies]
tokio.workspace = true
futures.workspace = true
libp2p.workspace = true
subxt.workspace = true
serde.workspace = true
serde_json.workspace = true
parity-scale-codec.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
