[package]
name = "icn-director"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ICN Director Node - GPU-powered video generation with BFT coordination"

[[bin]]
name = "icn-director"
path = "src/main.rs"

[dependencies]
icn-common.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

# Python interop for Vortex
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
