[package]
name = "icn-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ICN Regional Relay Node - Tier 2 content distribution"

[[bin]]
name = "icn-relay"
path = "src/main.rs"

[dependencies]
icn-common.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
