[package]
name = "icn-director"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ICN Director Node - GPU-powered video generation with BFT coordination"

[lib]
name = "icn_director"
path = "src/lib.rs"

[[bin]]
name = "icn-director"
path = "src/main.rs"

[dependencies]
# Local crates
icn-common.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# P2P networking
libp2p.workspace = true

# Substrate client
subxt.workspace = true

# gRPC for BFT coordination
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Serialization
serde.workspace = true
serde_json.workspace = true
parity-scale-codec.workspace = true

# Configuration
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Crypto
ed25519-dalek.workspace = true
base64 = "0.22"

# Metrics
prometheus.workspace = true
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Python interop for Vortex
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# Utils
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.12"

[features]
default = ["stub"]
integration-tests = []
stub = []
