[package]
name = "nsn-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

nsn-types = { workspace = true }

[build-dependencies]
tonic-build = "0.10"
