[package]
name = "nsn-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Enable NVIDIA GPU integration via NVML
# Requires NVIDIA drivers and NVML library to be installed
nvidia = ["nvml-wrapper"]

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }
futures = { workspace = true }
bollard = "0.16"

nsn-types = { workspace = true }

# Optional NVIDIA Management Library wrapper
nvml-wrapper = { version = "0.10", optional = true }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
