[package]
name = "nsn-integration-tests"
description = "Integration tests for NSN Chain pallets"
version = "0.1.0"
license = "GPL-3.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
# NSN custom pallets
pallet-nsn-stake = { workspace = true, features = ["std"] }
pallet-nsn-reputation = { workspace = true, features = ["std"] }
pallet-nsn-director = { workspace = true, features = ["std"] }
pallet-nsn-bft = { workspace = true, features = ["std"] }
pallet-nsn-treasury = { workspace = true, features = ["std"] }
pallet-nsn-task-market = { workspace = true, features = ["std"] }
pallet-nsn-model-registry = { workspace = true, features = ["std"] }

# Substrate dependencies
frame-support = { workspace = true, features = ["std"] }
frame-system = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
codec = { workspace = true, features = ["std", "derive"] }
scale-info = { workspace = true, features = ["std", "derive"] }

[dev-dependencies]
# All production dependencies available in tests

[features]
default = ["std"]
std = []
