[package]
name = "nsn-node"
description = "NSN Chain node implementation - Polkadot SDK based blockchain for Neural Sovereign Network"
version = "0.1.0"
license = "GPL-3.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "nsn-node"
path = "src/main.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
nsn-runtime = { workspace = true }
polkadot-sdk = { workspace = true, features = ["node"] }
polkadot-cli = { workspace = true, features = ["rococo-native"] }
prometheus-endpoint = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"nsn-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"nsn-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"nsn-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
