[package]
name = "nsn-runtime"
description = "NSN Chain runtime - Polkadot SDK based blockchain for Neural Sovereign Network"
version = "0.1.0"
license = "GPL-3.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
docify = { workspace = true }
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
docify = { workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }

# NSN custom pallets
pallet-nsn-stake = { workspace = true }
pallet-nsn-reputation = { workspace = true }
pallet-nsn-director = { workspace = true }
pallet-nsn-bft = { workspace = true }
pallet-nsn-storage = { workspace = true }
pallet-nsn-treasury = { workspace = true }
pallet-nsn-task-market = { workspace = true }
pallet-nsn-model-registry = { workspace = true }

# Required for register_validate_block! macro (needs crate named exactly this)
cumulus-pallet-parachain-system = { workspace = true }

polkadot-sdk = { workspace = true, features = ["cumulus-pallet-aura-ext", "cumulus-pallet-parachain-system", "cumulus-pallet-session-benchmarking", "cumulus-pallet-weight-reclaim", "cumulus-pallet-xcm", "cumulus-pallet-xcmp-queue", "cumulus-primitives-aura", "cumulus-primitives-core", "cumulus-primitives-utility", "pallet-aura", "pallet-authorship", "pallet-balances", "pallet-collator-selection", "pallet-insecure-randomness-collective-flip", "pallet-message-queue", "pallet-session", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "pallet-xcm", "parachains-common", "polkadot-parachain-primitives", "polkadot-runtime-common", "runtime", "staging-parachain-info", "staging-xcm", "staging-xcm-builder", "staging-xcm-executor"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
smallvec = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"pallet-nsn-stake/std",
	"pallet-nsn-reputation/std",
	"pallet-nsn-director/std",
	"pallet-nsn-bft/std",
	"pallet-nsn-storage/std",
	"pallet-nsn-treasury/std",
	"pallet-nsn-task-market/std",
	"pallet-nsn-model-registry/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"hex-literal",
	"pallet-nsn-stake/runtime-benchmarks",
	"pallet-nsn-reputation/runtime-benchmarks",
	"pallet-nsn-director/runtime-benchmarks",
	"pallet-nsn-bft/runtime-benchmarks",
	"pallet-nsn-storage/runtime-benchmarks",
	"pallet-nsn-treasury/runtime-benchmarks",
	"pallet-nsn-task-market/runtime-benchmarks",
	"pallet-nsn-model-registry/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
	"pallet-nsn-stake/try-runtime",
	"pallet-nsn-reputation/try-runtime",
	"pallet-nsn-director/try-runtime",
	"pallet-nsn-bft/try-runtime",
	"pallet-nsn-storage/try-runtime",
	"pallet-nsn-treasury/try-runtime",
	"pallet-nsn-task-market/try-runtime",
	"pallet-nsn-model-registry/try-runtime",
	"polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
