[package]
name = "icn-viewer"
version = "0.1.0"
edition = "2021"
description = "ICN Viewer Client - Desktop app for interdimensional cable"
license = "MIT"

[lib]
name = "icn_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# P2P for optional seeding
libp2p = { version = "0.53", features = ["tokio", "quic", "gossipsub"], optional = true }
tokio = { version = "1.43", features = ["rt-multi-thread"], optional = true }

[features]
default = []
seeding = ["libp2p", "tokio"]
