[package]
name = "nsn-chain-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
subxt = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

nsn-types = { workspace = true }
