[package]
name = "nsn-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# P2P networking
libp2p = { workspace = true, features = ["macros", "relay", "dcutr", "autonat"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
humantime-serde = "1.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto (for identity)
sp-core = "28.0"

# Metrics
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

# Chain client for reputation oracle
subxt = "0.37"

# Workspace crates
nsn-types = { workspace = true }

# NAT traversal
igd-next = "0.14"
stun_codec = "0.3"
bytecodec = "0.4"

[dev-dependencies]
tempfile = "3.8"

[features]
test-helpers = []
